# embedded

GPIO_OUTPUT/: CMakeLists.txt
GPIO_OUTPUT/Core/Inc/: clock.h  delay.h  gpio.h  main.h
GPIO_OUTPUT/Core/Src/: clock.c  delay.c  gpio.c  main.c
GPIO_OUTPUT/Drivers/Device/Inc/: stm32f4xx.h
GPIO_OUTPUT/Drivers/Device/Src/: minimal_exit.c
LED_BLINK/: CMakeLists.txt
LED_BLINK/Core/Src/: main.c
PWM_POT/: CMakeLists.txt  STM32F411CEUx_FLASH.ld
PWM_POT/Core/Src/: main.c
